<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profileinfo">
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/profile_info_header"
            android:textColor="@color/dark_green"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profileinfo_header2" />
<Space
    android:layout_width="match_parent"
    android:layout_height="30dp"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/profile_cardview"
            android:layout_width="@dimen/profileinfo_cardview_width"
            android:layout_height="@dimen/profileinfo_cardview_height"
            android:layout_gravity="center"
            android:clickable="true"
            app:cardCornerRadius="@dimen/profileinfo_cardview_radius">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/camera_image_button"
                android:layout_width="@dimen/profileinfo_imageview_width"
                android:layout_height="@dimen/profileinfo_imageview_height"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
<Space
    android:id="@+id/space"
    android:layout_width="match_parent"
    android:layout_height="20dp"
    app:layout_constraintTop_toBottomOf="@id/layout2"
    tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/profile_name_edit_text"
        android:layout_width="@dimen/profileinfo_edittext_width"
        android:layout_height="@dimen/profileinfo_edittext_height"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profileInfo_Btn"
        android:layout_width="@dimen/profileinfo_button_width"
        android:layout_height="@dimen/profileinfo_button_height"
        android:background="@color/light_green"
        android:text="@string/profileinfo_button_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name_edit_text"
        app:layout_constraintVertical_bias="0.03" />
</androidx.constraintlayout.widget.ConstraintLayout>
