<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_new_contacts">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/New_Contacts_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:titleTextColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/Add_new_contact_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_close" />

            <TextView
                android:id="@+id/text_view_new_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/Add_new_contact_close"
                android:text="@string/Add_new_contact_header"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/Add_new_contact_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toRightOf="@id/text_view_new_contact"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_done" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_new_contact_nickName_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:divider="@color/white"
        app:boxStrokeColor="@color/neon_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/New_Contacts_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_new_contact_nickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/texteditbackground"
            android:hint="@string/add_new_contact_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/white"
        app:boxStrokeColor="@color/neon_blue"
        app:layout_constraintTop_toBottomOf="@id/add_new_contact_nickName_layout"
        tools:layout_editor_absoluteX="-35dp"
        tools:layout_editor_absoluteY="161dp"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/add_new_contact_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:background="@drawable/texteditbackground"
            android:hint="@string/add_new_contact_phone_hint" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>